# GrahicNovelRevamp

./: README.md
GraphicNovelRevamp/: app.py  desktop.ini  models.py  pyproject.toml  replit.nix  replit_zip_error_log.txt
GraphicNovelRevamp/services/: ai_scene_service.py
GraphicNovelRevamp/static/css/: custom.css
GraphicNovelRevamp/static/js/: comic_editor.js  panel_layout.js  text_analyzer.js
GraphicNovelRevamp/templates/: base.html  editor.html  index.html  login.html  register.html
